# greentic-redbutton

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.codex/: PR-01.md  repo_overview.md  repo_overview_task.md
.github/workflows/: ci.yml  dev-publish.yml  publish.yml
ci/: local_check.sh  publishable_crates.py  release_version.py
demo/: README.md  bundle.yaml  greentic.demo.yaml  gtc_wizard_answers.json  setup.sh  watch.sh
demo/apps/redbutton-app/: pack.lock.cbor  pack.yaml
demo/apps/redbutton-app/components/component-events2msg/: component.manifest.json  component.wasm
demo/apps/redbutton-app/components/component-msg2events/: component.manifest.json  component.wasm
demo/apps/redbutton-app/components/redbutton-handler/: component.manifest.json  component.wasm
demo/apps/redbutton-app/flows/: on_message.ygtc  on_message.ygtc.resolve.json  on_message.ygtc.resolve.summary.json  on_redbutton.ygtc  on_redbutton.ygtc.resolve.json  on_redbutton.ygtc.resolve.summary.json
demo/component-redbutton-handler/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  component.manifest.json  rust-toolchain.toml
demo/component-redbutton-handler/.github/workflows/: ci.yml
demo/component-redbutton-handler/assets/i18n/: en.json  locales.json
demo/component-redbutton-handler/schemas/: component.schema.json
demo/component-redbutton-handler/src/: i18n.rs  i18n_bundle.rs  lib.rs  qa.rs
demo/component-redbutton-handler/tests/: conformance.rs
demo/component-redbutton-handler/tools/: i18n.sh
demo/dashboard/: index.html
i18n/: sk.json
src/: cli.rs  config.rs  constants.rs  doctor.rs  event.rs  i18n.rs  integration_tests.rs  main.rs  runtime.rs  suppress.rs  webhook.rs
src/device/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
tools/: i18n.sh
