[package]
name = "greentic-redbutton"
version = "0.4.0"
edition = "2024"
description = "Cross-platform Greentic red-button CLI scaffold with embedded i18n and release automation"
license = "MIT"
repository = "https://github.com/greenticai/greentic-redbutton"
homepage = "https://github.com/greenticai/greentic-redbutton"
documentation = "https://docs.rs/greentic-redbutton"
readme = "README.md"
keywords = ["greentic", "cli", "webhook", "i18n", "automation"]
categories = ["command-line-utilities"]
include = [
  "build.rs",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "README.md",
  "src/**",
  "i18n/**",
  "ci/**",
  "tools/i18n.sh",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hidapi = "2.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
unic-langid = "0.9"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = "1.4"

[build-dependencies]
serde_json = "1.0"
