[package]
name = "redbutton-handler"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component redbutton-handler"
repository = "https://github.com/redbutton-handler"
build = "build.rs"
authors = ["bimapangestu"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component@0.6.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-interfaces-guest = { path = "../../../greentic-interfaces/crates/greentic-interfaces-guest", default-features = false, features = ["component-v0-6"] }
greentic-types = { path = "../../../greentic-types" }

[build-dependencies]
serde_json = "1"
greentic-types = { path = "../../../greentic-types" }

[dev-dependencies]
serde_json = "1"
